# saunafs

./: .clang-format  .clang-tidy  .codespellrc  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  INSTALL.md  Jenkinsfile  NEWS  README.md  ReleaseNotes  config.h.in  configure  create-deb-package.sh  create-osx-package.sh  create-rpm-package.sh  create_win_release.bat  package.sh  vcpkg.json
doc/: CMakeLists.txt  saunafs-admin.8.adoc  saunafs-appendchunks.1.adoc  saunafs-appendchunks.1.txt  saunafs-cgiserver.8.adoc  saunafs-cgiserver.8.txt  saunafs-checkfile.1.adoc  saunafs-dirinfo.1.adoc  saunafs-fileinfo.1.adoc  saunafs-fileinfo.1.txt  saunafs-filerepair.1.adoc  saunafs-filerepair.1.txt  saunafs-geteattr.1.adoc  saunafs-getgoal.1.adoc  saunafs-gettrashtime.1.adoc  saunafs-makesnapshot.1.adoc  saunafs-repquota.1.adoc  saunafs-rremove.1.adoc  saunafs-uraft-helper.8.adoc  saunafs-uraft.8.adoc  saunafs-uraft.cfg.5.adoc  saunafs-uraft.cfg.5.txt  saunafs.1.adoc  sfs.7.adoc  sfs.7.txt  sfscgiserv.8.adoc  sfschunkserver.8.adoc  sfschunkserver.8.txt  sfschunkserver.cfg.5.adoc  sfsexports.cfg.5.adoc  sfsglobaliolimits.cfg.5.adoc  sfsglobaliolimits.cfg.5.txt  sfsgoals.cfg.5.adoc  sfshdd.cfg.5.adoc  sfshdd.cfg.5.txt  sfsiolimits.cfg.5.adoc  sfsiolimits.cfg.5.txt  sfsmaster.8.adoc  sfsmaster.cfg.5.adoc  sfsmetadump.8.adoc  (+14 more)
src/admin/: CMakeLists.txt  chunk_health_command.cc  chunk_health_command.h  delete_sessions_command.cc  delete_sessions_command.h  dump_config_command.cc  dump_config_command.h  escape_porcelain_string.h  escape_porcelain_string_unittest.cc  info_command.cc  info_command.h  io_limits_status_command.cc  io_limits_status_command.h  list_chunkservers_command.cc  list_chunkservers_command.h  list_defective_files_command.cc  list_defective_files_command.h  list_disk_groups_command.cc  list_disk_groups_command.h  list_disks_command.cc  list_disks_command.h  list_goals_command.cc  list_goals_command.h  list_metadataservers_command.cc  list_metadataservers_command.h  list_mounts_command.cc  list_mounts_command.h  list_sessions_command.cc  list_sessions_command.h  list_tapeservers_command.cc  list_tapeservers_command.h  list_tasks_command.cc  list_tasks_command.h  magic_recalculate_metadata_checksum_command.cc  magic_recalculate_metadata_checksum_command.h  main.cc  manage_locks_command.cc  manage_locks_command.h  metadataserver_status_command.cc  metadataserver_status_command.h  (+18 more)
src/cgi/: CMakeLists.txt  cgiserv.py.in  help.html  index.html  mfs.cgi.in  saunafs-cgiserver.py.in  sfs.cgi.in  sfs.css
src/chunkserver/: CMakeLists.txt  aligned_allocator.h  bgjobs.cc  bgjobs.h  buffers_pool.h  chartsdata.cc  chartsdata.h  chunk.cc  chunk.h  chunk_file_creator.cc  chunk_file_creator.h  chunk_filename_parser.cc  chunk_filename_parser.h  chunk_filename_parser_unittest.cc  chunk_replicator.cc  chunk_replicator.h  chunk_unittest.cc  chunkserver_entry.cc  chunkserver_entry.h  cmr_chunk.h  cmr_disk.cc  default_disk_energy_manager.cc  default_disk_energy_manager.h  default_disk_manager.cc  default_disk_manager.h  disk_chunks_unittest.cc  disk_unittest.cc  folder.cc  folder.h  folder_chunks.cc  folder_chunks.h  folder_chunks_unittest.cc  g_limiters.cc  g_limiters.h  hdd_readahead.cc  hdd_readahead.h  hdd_readahead_unittest.cc  hddspacemgr.cc  hddspacemgr.h  init.h  (+20 more)
src/common/: CMakeLists.txt  access_control_list.cc  access_control_list.h  access_control_list_unittest.cc  acl_converter.cc  acl_converter.h  acl_converter_unittest.cc  acl_type.h  attributes.h  block_xor.cc  block_xor.h  block_xor_unittest.cc  case_sensitivity.h  cfg.cc  cfg.h  cfg_options.h  cfg_unittest.cc  charts.cc  charts.h  chunk_connector.cc  chunk_connector.h  chunk_copies_calculator.cc  chunk_copies_calculator.h  chunk_copies_calculator_unittest.cc  chunk_part_type.h  chunk_part_type_unittest.cc  chunk_read_planner.h  chunk_read_planner_unittest.cc  chunk_type_with_address.h  chunk_version_with_todel_flag.h  chunk_with_address_and_label.h  chunk_with_version.h  chunk_with_version_and_type.h  chunks_availability_state.h  chunks_availability_state_unittest.cc  chunkserver_stats.cc  chunkserver_stats.h  chunkserver_stats_unittest.cc  compact_vector.h  compact_vector_unittest.cc  (+191 more)
src/data/: CMakeLists.txt  liblizardfs-client-example.c  libsaunafs-client-example.c  metadata.sfs  saunafs-uraft.cfg  saunafs.completion  sfschunkserver.cfg.in  sfsexports.cfg  sfsglobaliolimits.cfg  sfsgoals.cfg  sfshdd.cfg  sfsiolimits.cfg  sfsmaster.cfg.in  sfsmetalogger.cfg.in  sfsmount.cfg  sfstopology.cfg
src/master/: CMakeLists.txt  acl_storage.cc  acl_storage.h  acl_storage_unittest.cc  changelog.cc  changelog.h  chartsdata.cc  chartsdata.h  checksum.h  chunk_goal_counters.cc  chunk_goal_counters.h  chunk_goal_counters_unittest.cc  chunks.cc  chunks.h  chunkserver_db.cc  chunkserver_db.h  datacachemgr.cc  datacachemgr.h  exports.cc  exports.h  filesystem.cc  filesystem.h  filesystem_checksum.cc  filesystem_checksum.h  filesystem_checksum_background_updater.cc  filesystem_checksum_background_updater.h  filesystem_checksum_updater.cc  filesystem_checksum_updater.h  filesystem_dump.cc  filesystem_freenode.cc  filesystem_freenode.h  filesystem_metadata.h  filesystem_node.cc  filesystem_node.h  filesystem_node_types.h  filesystem_operations.cc  filesystem_operations.h  filesystem_periodic.cc  filesystem_periodic.h  filesystem_quota.cc  (+72 more)
src/metalogger/: CMakeLists.txt  init.h
src/metarestore/: CMakeLists.txt  main.cc  merger.cc  merger.h
src/metrics/: CMakeLists.txt  master.cc  master.h  metrics.cc  metrics.h  utils.h
src/mount/: CMakeLists.txt  acl_cache.h  acquired_files_last_time_used.h  chunk_locator.cc  chunk_locator.h  chunk_reader.cc  chunk_reader.h  chunk_writer.cc  chunk_writer.h  client_common.h  direntry_cache.h  direntry_cache_unittest.cc  exports.h  g_io_limiters.cc  g_io_limiters.h  global_chunkserver_stats.cc  global_chunkserver_stats.h  global_io_limiter.cc  global_io_limiter.h  global_io_limiter_unittest.cc  group_cache.h  io_limit_group.cc  oplog.cc  (+44 more)
(+783 files in other folders)
